[package]
name = "rustscan"
version = "2.1.1"
authors = ["Autumn <autumn@skerritt.blog>"]
edition = "2021"
description = "Faster Nmap Scanning with Rust"
homepage = "https://github.com/rustscan/rustscan"
repository = "https://github.com/rustscan/rustscan"
license = "MIT"
keywords = ["port", "scanning", "nmap"]
categories = ["command-line-utilities"]
readme="README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "rustscan-debbuilder/*",
]

[dependencies]
colored = "2.1.0"
structopt = "0.3.26"
async-std = "1.12.0"
futures = "0.3"
rlimit = "0.10.1"
shell-words = "1.1.0"
log = "0.4.21"
env_logger = "0.11.3"
dirs = "5.0.1"
gcd = "2.3.0"
rand = "0.8.5"
colorful = "0.2.2"
ansi_term = "0.12.1"
toml = "0.8.12"
serde = "1.0.198"
serde_derive = "1.0.198"
cidr-utils = {version = "0.6.1", features = ["separator", "combiner"]}
itertools = "0.12.1"
trust-dns-resolver = { version = "0.23.2", features = ["dns-over-rustls"] }
anyhow = "1.0.82"
subprocess = "0.2.9"
text_placeholder = { version = "0.5", features = ["struct_context"] }

[dev-dependencies]
wait-timeout = "0.2"

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true
opt-level = 3
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rustscan"
path = "src/main.rs"